@@ -4,6 +4,7 @@ import com.example.hr.model.Opening;
 import com.example.hr.repository.OpeningRepository;
 import com.example.hr.model.Application;
 import com.example.hr.repository.ApplicationRepository;
+import com.example.hr.service.HibernateStatisticsService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -26,12 +27,15 @@ public class ApplicationRepositoryCommandLineRunner implements CommandLineRunner
     @Autowired
     private OpeningRepository openingRepository;
 
+    @Autowired
+    private HibernateStatisticsService statisticsService;
+
     @Override
     public void run(String... args) throws Exception {
 
         List<Opening> openings = openingRepository.findAll();
 
-        Opening opening = openings.get(0);
+        Opening opening = openings.getFirst();
 
         Application app1 = new Application(new Date(), "Mujo", "Mujić", "mujo.mujic@gmail.com", "+061123456", "https://docs.com/cv1", "Pending", 85.0, opening);
         Application app2 = new Application(new Date(), "Haso", "Hasić", "haso.hasic@gmail.com", "+062456789", "https://docs.com/cv2", "Accepted", 92.5, opening);
@@ -42,6 +46,7 @@ public class ApplicationRepositoryCommandLineRunner implements CommandLineRunner
         applicationRepository.save(app3);
 
         log.info("Applications unesene u bazu!");
+        //statisticsService.logStatistics();
 
     }
 }
